deployment/02-chat-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: client-app
  labels:
    app: client-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      containers:
        - name: client-app
          image: iivashchuk/jsprocamp-client-app
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client-app

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: client-app
  type: LoadBalancer
